<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <LinearLayout
        android:id="@+id/layout_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="com.example.hanna.golfcounter.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.hanna.golfcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/PlayerA"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginSmall"
                android:background="@drawable/button_style1"
                android:onClick="addThreeToTeamA"
                android:text="@string/TripleBogey" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style1"
                android:onClick="addTwoToTeamA"
                android:text="@string/DoubleBogey" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style1"
                android:onClick="addOneToTeamA"
                android:text="@string/Bogey" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style2"
                android:onClick="subsOneTeamA"
                android:text="@string/Birdie" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style2"
                android:onClick="subsTwoTeamA"
                android:text="@string/Eagle"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_style2"
                android:onClick="subsThreeTeamA"
                android:text="@string/Albatross" />


        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"
            android:gravity="center_horizontal" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.hanna.golfcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/PlayerB"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button1B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginSmall"
                android:background="@drawable/button_style1"
                android:onClick="addThreeToTeamB"
                android:text="@string/TripleBogey" />

            <Button
                android:id="@+id/button2B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style1"
                android:onClick="addTwoToTeamB"
                android:text="@string/DoubleBogey" />

            <Button
                android:id="@+id/button3B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style1"
                android:onClick="addOneToTeamB"
                android:text="@string/Bogey" />

            <Button
                android:id="@+id/button4B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style2"
                android:onClick="subsOneTeamB"
                android:text="@string/Birdie" />

            <Button
                android:id="@+id/button5B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:background="@drawable/button_style2"
                android:onClick="subsTwoTeamB"
                android:text="@string/Eagle" />

            <Button
                android:id="@+id/button6B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ButtonMarginLR"
                android:layout_marginRight="@dimen/ButtonMarginLR"
                android:layout_marginTop="@dimen/ButtonMarginBig"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_style2"
                android:onClick="subsThreeTeamB"
                android:text="@string/Albatross" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_scores"
        android:layout_centerHorizontal="true"
        android:onClick="reset"
        android:text="@string/Reset" />


</RelativeLayout>

</ScrollView>